--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
-    "@next-core/custom-antd-styles": "1.6.1",
     "antd": "4.11.1",
-    "antd-theme-generator": "1.2.8",
+    "lodash": "4.17.20",
     "next": "latest",
+    "next-sass": "1.0.3",
+    "node-sass": "5.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sass": "1.32.5",
+    "sass-loader": "10.1.1"
   },
   "license": "MIT",
   "keywords": [],
